# OOP_lab3

./: CMakeLists.txt  TODO.md  main.cpp
include/: Array.h  Figure.h  Geometry.h  Point.h  Rectangle.h  Square.h  Trapezoid.h
src/: Array.cpp  Point.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp
test/: tests.cpp
